fix layout bug

--- a/public/css/SurfaceDetailCard.css
+++ b/public/css/SurfaceDetailCard.css
@@ -7,7 +7,7 @@
     opacity: 0.8;
     margin-left: 5px;
     margin-right: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 55px;
 }
 
 #SurfaceDetailCard .element-id-field {
