--- a/public/css/SurfaceEditor.css
+++ b/public/css/SurfaceEditor.css
@@ -1,6 +1,6 @@
 
 #SurfaceEditor .osd-viewer {
-    height: calc( 100vh - 102px );
+    height: calc( 100vh - 152px );
     width: 100%;
 }
 
